syntax = "proto3";
option go_package = "./pb";

// Service Definition
service MessageService {
  rpc SendMessage (AMessageV1) returns (BMessageV1);
}

// Request Message
message AMessageV1 {
  string message = 1;
  int32 code = 2;
}

// Response Message
message BMessageV1 {
  int64 timestamp = 3;
}